# colas

./: .gitignore  README.md  client.py  pyproject.toml  quincy.py  worker.py
.cursor/rules/: conventions.mdc
src/colas/: __init__.py  app.py  queue.py  results.py  stream.py
src/colas/postgres/: connection.py  queue.py  results.py  stream.py
src/colas/sqlite/: queue.py  results.py  stream.py
tests/: conftest.py  test_app.py  test_queue.py  test_results.py  test_stream.py
