[project]
name = "quincy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "msgpack>=1.1.1",
]

[tool.setuptools]
py-modules = ["quincy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "freezegun>=1.5.2",
]
